# WRoverSoftware

./: .README.md.swp  .gitignore  DOCKER_README.md  Dockerfile  NON_DOCKER_README.md  README-IK.md  README.md  canableStart.sh  docker_readme.md  driverStart.sh  readme.md  roverStart.sh  setup.md  setup_relaxedik.sh  train_combined  train_letters.py  train_mnist.py
GUI/: Dockerfile  README.md  docker-compose.yml  gstreamerPipe.txt  package.json  requirements.txt
GUI/src/: app.py  setup.py  streamProducer.py  streamReceiver.py
GUI/src/rosbridge/: start.sh
GUI/src/startup/: serviceMission.py
GUI/src/templates/: index.html  map.html
GUI/testVideoPipe/: Dockerfile
install/: local_setup.sh  setup.sh
launch/: arm_falcon_launch.py  arm_ik_launch.py  arm_launch.py  arm_test_launch.py  old_swerve_launch.py  swerve_launch.py  swerve_launch_base.py  swerve_launch_rover.py  xbox_controllers_launch.py
log/: latest_build
onshape_conversion/: ONSHAPE_README.md  onshape-converter-terminal.Dockerfile  onshape-converter.Dockerfile  run_onshape_conversion.py
onshape_conversion/converted_robot/: 1.part  217-3875-step-20140818.part  50w°²×°°å.part  50w¶¨×ó.part  50w¶¨×ó.stl  50w»ú¿ç.part  50w»ú¿ç.stl  50w×ªöá.part  50w×ªöá.stl  50wì×í².stl  91595a452_dowel_pin.part  91595a452_dowel_pin.stl  92981a777_alloy_steel_shoulder_screws.part  92981a777_alloy_steel_shoulder_screws.stl  96505a113_steel_oversized_washer.part  arm-cg-gear-prt.part  arm-cg-gear-prt.stl  arm-cgb-output-bottom.part  arm-cgb-output-bottom__list_o32qo82goagccf_default.part  arm-cgb-output-bottom__list_o32qo82goagccf_default.stl  arm-cgb-output-bottom__list_o32qo82goagccf_standard.part  arm-cgb-output-top.stl  arm-cgb-output-top__list_o32qo82goagccf_default.part  arm-cgb-output-top__list_o32qo82goagccf_default.stl  arm-cgb-output-top__list_o32qo82goagccf_standard.part  arm-differential_sidebracket.stl  bevel_gear.part  bevel_gear.stl  bottom.part  housing.part  linear_rod_placeholder.part  linear_rod_placeholder.stl  link_arm__list_bssx4km84nfaeg_default.part  link_arm_hinge.part  link_arm_hinge.stl  manipulator_base.part  manipulator_base.stl  manipulator_end_support.part  manipulator_end_support.stl  middle.part  (+18 more)
onshape_conversion/joint_1/: link_arm__list_bssx4km84nfaeg_default.part  link_arm__list_bssx4km84nfaeg_default.stl  link_arm_hinge.part  part_1.part  part_1__list_bssx4km84nfaeg_default.part  robot.urdf
onshape_conversion/joint_2/: linear_rod_placeholder.part  manipulator_base.part  manipulator_base.stl  manipulator_end_support.stl  moving_claw.part  moving_claw.stl  moving_gripper.stl  part_1.part  rev-21-1651.part  robot.urdf  ultraplanetary_female_5mm_hex_output_v2_(rev-41-1615).stl
src/: README.md  object_avoider.py
src/Autonomous/ai_drive/: package.xml  setup.cfg  setup.py
src/Autonomous/auto_implementation/: setup.py
src/Autonomous/autonomous_camera/: package.xml  setup.cfg  setup.py
src/Autonomous/get_gps_data/: package.xml
src/Autonomous/object_detection_package/: README.md  package.xml  setup.py
src/Autonomous/state_machine/: Review.py  setup.py
src/Autonomous/wr_LED_matrix/: package.xml  setup.cfg  setup.py
src/Autonomous/wr_autonomous_camera/: package.xml  setup.cfg  setup.py
src/Autonomous/wr_depth_camera/: setup.cfg
src/Autonomous/wr_drive_ai/: package.xml  setup.cfg  setup.py
src/Messages/custom_msgs_srvs/: CMakeLists.txt  package.xml
src/arm_ik/: CMakeLists.txt  README.md  package.xml
src/arm_test/: .README.md.swp  CMakeLists copy 2.txt  CMakeLists copy.txt  CMakeLists.txt  README.md  package.xml
src/arm_test/src/: .arm_test_node.cpp.swp  arm_orchestra_node.cpp  arm_test_node.cpp  arm_tone_node.cpp  ik_test_node.cpp  onwisc.chrp
src/arm_test_python/: package.xml  setup.cfg  setup.py
src/get_compass_data/: compassData.cpp
src/get_gps_data/: setup.cfg  setup.py
src/my_package/: package.xml
src/object_avoidance/: setup.py
src/position_control/: DRAWING_README.md  package.xml  setup.py  state_machine.puml
src/swerve_motor_old/: package.xml  setup.cfg  setup.py
src/urdf_visualization/: CMakeLists.txt
src/wr_can_comms/: README.md
src/wr_driver_ai/: package.xml  setup.cfg  setup.py
src/wr_object_detection/: README.md
src/wr_obstacle_avoidance/: README.md  package.xml  setup.cfg  setup.py
src/wr_status_commands/: package.xml  setup.cfg  setup.py
src/wr_swerve_motor/: package.xml  setup.py
src/wr_xbox_controller/: setup.py
templates/: actual_map.html  map.html
(+279 files in other folders)
